--- a/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
@@ -228,7 +228,7 @@
     @*Create attribute modal*@
     <div id="createAttributeModal" class="modal">
         <h2>Welcome to the attribute modal!</h2>
-        <form name="create attribute">
+        <form asp-action="CreateAttribute" asp-controller="Attribute">
 
         </form>
     </div>
