--- a/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
@@ -9,7 +9,6 @@
 <div class="container">
     <div class="row" style="margin-top: 1.5em">
         <div class="right">
-
             <a href="#createSubcategoryModal" class="btn waves-effect green modal-trigger">New subcategory<i class="material-icons right">playlist_add</i></a>
             <a asp-action="Logout" asp-controller="Account" class="btn waves-effect red">Logout<i class="material-icons right">exit_to_app</i></a>
 
@@ -38,26 +37,43 @@
                                     @s.Name
                                 </a>
                             </td>
+                            @*If the role can publish there will be a button, otherwise it
+                                will just tell the published value*@
                             <td>
-                                <form asp-action="PublishSubcategory" asp-controller="Subcategory">
+                                @if (!User.IsInRole("Admin") || !User.IsInRole("Publisher"))
+                                {
+                                    <form asp-action="PublishSubcategory" asp-controller="Subcategory">
 
+                                        @if (s.Published)
+                                        {
+                                            <button class="btn waves-effect green darken-1" type="submit">
+                                                Published
+                                                <i class="material-icons right">check</i>
+                                            </button>
+                                        }
+                                        else
+                                        {
+                                            <button class="btn waves-effect red" type="submit">
+                                                Unpublished
+                                                <i class="material-icons right">lock_outline</i>
+                                            </button>
+                                        }
+                                        <input type="hidden" name="subcategoryId" value="@s.Id" />
+
+                                    </form>
+                                }
+                                else
+                                {
                                     @if (s.Published)
                                     {
-                                        <button class="btn waves-effect green darken-1" type="submit">
-                                            Published
-                                            <i class="material-icons right">check</i>
-                                        </button>
+                                        <p>Published</p>
                                     }
                                     else
                                     {
-                                        <button class="btn waves-effect red" type="submit">
-                                            Unpublished
-                                            <i class="material-icons right">lock_outline</i>
-                                        </button>
+                                        <p>Unpublished</p>
                                     }
-                                    <input type="hidden" name="subcategoryId" value="@s.Id" />
+                                }
 
-                                </form>
 
                             </td>
 
@@ -135,10 +151,23 @@
                 }
 
                 <div class="row">
-                    <a href="#createAttributeModal" class="createAttribute btn waves-effect small modal-trigger">
-                        Create new attribute
-                        <i class="material-icons right">playlist_add</i>
-                    </a>
+                    <div class="col s6">
+                        <a href="#createAttributeModal" class="createAttribute btn waves-effect small modal-trigger">
+                            Create new attribute
+                            <i class="material-icons right">playlist_add</i>
+                        </a>
+                    </div>
+                    @*The attributes will end up here*@
+                    <div class="row col s6">
+                        <div id="attr-group" class="input-field col s12">
+                            <i class="material-icons prefix">add</i>
+                            <input asp-for="AttributeGroupName" id="attribute-group-name" type="text" class="validate" />
+                            <label asp-for="AttributeGroupName" for="attribute-group-name">Name this group of attributes</label>
+                        </div>
+                        <div id="sub-attribute-container" class="col s12">
+                            <input asp-for="AttributeName" id="attribute-container-input" type="hidden" value="" />
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -227,10 +256,59 @@
 
     @*Create attribute modal*@
     <div id="createAttributeModal" class="modal">
-        <h2>Welcome to the attribute modal!</h2>
-        <form asp-action="CreateAttribute" asp-controller="Attribute">
 
-        </form>
+        <div class="modal-content">
+            <h4 class="center">Create new Attribute</h4>
+            <div class="row">
+                <div class="col s6">
+                    <div class="row">
+                        <div class="input-field col s8">
+                            <i class="material-icons prefix">library_books</i>
+                            <input asp-for="AttributeName" id="create-attribute-name" type="text" class="validate" />
+                            <label asp-for="AttributeName" for="create-attribute-name">Attribute name</label>
+                        </div>
+                        <div class="input-field col s4">
+                            <button id="create-attribute-button" class="btn waves-effect">
+                                Add
+                                <i class="material-icons right">send</i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s8">
+                            <div class="input-field pin-top">
+                                <select asp-for="Type" class="attrTypeSelect">
+                                    <option selected disabled>chsose type</option>
+                                    <option value="bool">Yes/no</option>
+                                    <option value="string">Text</option>
+                                    <option value="int">Integer number</option>
+                                    <option value="decimal">number with decimal</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                @*The chips will end up here*@
+                <div id="attribute-container" class="col s6">
+
+                    
+
+                </div>
+            </div>
+        </div>
+
+        <div class="modal-footer">
+            <div class="right">
+                <a class="modal-close waves-effect btn grey">
+                    Cancel
+                    <i class="material-icons right">cancel</i>
+                </a>
+                <a id="save-attributes" class="modal-close waves-effect btn green">
+                    Save and exit
+                    <i class="material-icons right">playlist_add_check</i>
+                </a>
+            </div>
+        </div>
     </div>
 
 </div>
