--- a/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
@@ -137,7 +137,7 @@
                     <div class="row">
 
                         <div class="input-field col s6">
-                            <select multiple>
+                            <select id="attribute-select" multiple>
                                 <option disabled selected>Choose attributes</option>
                                 @foreach (var a in Model.ProductAttributes)
                                 {
