--- a/KingPIM/KingPIM.Web/Views/Category/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Category/Index.cshtml
@@ -25,7 +25,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Name</th>
+                        <th>Category</th>
                         <th>Published</th>
                         <th>Version</th>
                         <th></th>
