--- a/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
@@ -23,7 +23,7 @@
             <table class="striped">
                 <thead>
                     <tr>
-                        <th>Name</th>
+                        <th>Product</th>
                         <th>Published</th>
                         <th>Price</th>
                         <th>Version</th>
