--- a/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
@@ -9,6 +9,7 @@
 <div class="container">
     <div class="row" style="margin-top: 1.5em">
         <div class="right">
+            @*<a href="#createAttributeGroupModal" class="btn waves-effect modal-trigger">New attribute group</a>*@
             <a href="#createSubcategoryModal" class="btn waves-effect green modal-trigger">New subcategory<i class="material-icons right">playlist_add</i></a>
             <a asp-action="Logout" asp-controller="Account" class="btn waves-effect red">Logout<i class="material-icons right">exit_to_app</i></a>
 
@@ -22,7 +23,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Name</th>
+                        <th>Subcategory</th>
                         <th>Published</th>
                         <th>Version</th>
                         <th></th>
@@ -33,9 +34,7 @@
                     {
                         <tr>
                             <td>
-                                <a asp-action="Subcategory" class="waves-effect waves-teal btn-flat" asp-route-subcategoryId="@s.Id">
-                                    @s.Name
-                                </a>
+                                @s.Name
                             </td>
                             @*If the role can publish there will be a button, otherwise it
                                 will just tell the published value*@
@@ -132,21 +131,28 @@
                     </div>
 
                 </div>
-                @if (Model.ProductAttributes != null && Model.ProductAttributes.Any())
+                @if (Model.AttributeGroups != null)
                 {
                     <div class="row">
 
                         <div class="input-field col s6">
-                            <select id="attribute-select" multiple>
-                                <option disabled selected>Choose attributes</option>
-                                @foreach (var a in Model.ProductAttributes)
+                            <select id="attribute-select">
+                                <option disabled selected>Choose attributegroups</option>
+                                @foreach (var a in Model.AttributeGroups)
                                 {
-                                    <option>@a.Name</option>
+                                    <option value="@a.Name%@a.Description">@a.Name</option>
                                 }
                             </select>
-                            <label>Choose your attributes</label>
+                            <label>Choose your attributegroups</label>
                         </div>
+                        @*The attributes will end up here*@
+                        <div class="row col s6">
 
+                            <input asp-for="AttributeGroupName" id="attribute-container-input" type="hidden" value="" />
+                            <div id="sub-attribute-container" class="col s12">
+
+                            </div>
+                        </div>
                     </div>
                 }
 
@@ -157,17 +163,7 @@
                             <i class="material-icons right">playlist_add</i>
                         </a>
                     </div>
-                    @*The attributes will end up here*@
-                    <div class="row col s6">
-                        <div id="attr-group" class="input-field col s12">
-                            <i class="material-icons prefix">add</i>
-                            <input asp-for="AttributeGroupName" id="attribute-group-name" type="text" class="validate" />
-                            <label asp-for="AttributeGroupName" for="attribute-group-name">Name this group of attributes</label>
-                        </div>
-                        <div id="sub-attribute-container" class="col s12">
-                            <input asp-for="AttributeName" id="attribute-container-input" type="hidden" value="" />
-                        </div>
-                    </div>
+
                 </div>
             </div>
 
@@ -224,7 +220,7 @@
                 <div class="row">
                     <div class="input-field col s6">
                         <select asp-for="CategoryId" class="categoryselect">
-                            <option disabled selected>Choose category</option>
+                            <option disabled>Choose category</option>
                             @foreach (var c in Model.Categories)
                             {
                                 <option value="@c.Id">@c.Name</option>
@@ -236,6 +232,21 @@
                         <i class="material-icons prefix">library_books</i>
                         <input asp-for="Name" id="edit_library_books" type="text" class="editSubcategoryModalValue validate" value="">
                         <label asp-for="Name" for="edit_library_books" class="active">Change subcategory name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <select asp-for="AttributeName" id="attribute-edit-select">
+                            <option disabled selected>Choose attributes</option>
+                            @foreach (var a in Model.ProductAttributes)
+                            {
+                                <option value="@a.Name|@a.Type">@a.Name</option>
+                            }
+                        </select>
+                        <label>Choose your attributes</label>
+                    </div>
+                    <div class="col s6">
+
                     </div>
                 </div>
             </div>
@@ -254,11 +265,13 @@
         </form>
     </div>
 
-    @*Create attribute modal*@
+
+
+    @*Create attributegroup modal*@
     <div id="createAttributeModal" class="modal">
 
         <div class="modal-content">
-            <h4 class="center">Create new Attribute</h4>
+            <h4 class="center">Create new Attributegroup</h4>
             <div class="row">
                 <div class="col s6">
                     <div class="row">
@@ -277,7 +290,7 @@
                     <div class="row">
                         <div class="col s8">
                             <div class="input-field pin-top">
-                                <select asp-for="Type" class="attrTypeSelect">
+                                <select asp-for="Type" id="attributeType-select" class="attrTypeSelect">
                                     <option selected disabled>chsose type</option>
                                     <option value="bool">Yes/no</option>
                                     <option value="string">Text</option>
@@ -288,12 +301,20 @@
                         </div>
                     </div>
                 </div>
-                @*The chips will end up here*@
-                <div id="attribute-container" class="col s6">
+                <div class="col s6">
+                    <div id="attr-group" class="input-field col s12">
+                        <i class="material-icons prefix">add</i>
+                        <input asp-for="AttributeGroupName" id="attribute-group-name" type="text" class="validate" />
+                        <label asp-for="AttributeGroupName" for="attribute-group-name">Name this group of attributes</label>
+                    </div>
+                    @*The chips will end up here*@
+                    <div id="attribute-container" class="col s6">
 
-                    
 
+
+                    </div>
                 </div>
+
             </div>
         </div>
 
@@ -313,3 +334,67 @@
 
 </div>
 
+@*Create new attributegroup modal*@
+@*<div id="createAttributeGroupModal" class="modal">
+        <div class="modal-content">
+            <h4 class="center">Create attributegroup</h4>
+            <div class="row">
+                <div class="col s6">
+                    <div class="row">
+                        <div class="input-field col s8">
+                            <i class="material-icons prefix">library_books</i>
+                            <input id="AttrGroup-attribute-name" type="text" class="validate" />
+                            <label for="AttrGroup-attribute-name">Attribute name</label>
+                        </div>
+                        <div class="input-field col s4">
+                            <button id="add-attribute-group" class="btn waves-effect">
+                                Add
+                                <i class="material-icons right">send</i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s8">
+                            <div class="input-field pin-top">
+                                <select id="attributeType-group" class="attrTypeSelect">
+                                    <option selected disabled>chsose type</option>
+                                    <option value="bool">Yes/no</option>
+                                    <option value="string">Text</option>
+                                    <option value="int">Integer number</option>
+                                    <option value="decimal">number with decimal</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="modal-close waves-effect btn grey">
+                        Cancel
+                        <i class="material-icons right">cancel</i>
+                    </a>
+                </div>
+                <div class="col s6">
+                    <form asp-action="">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">android</i>
+                            <input id="AttrGroup-name" type="text" class="validate" />
+                            <label for="AttrGroup-name">Attributegroup name</label>
+                        </div>
+                        <div id="attribute-group-attributes">
+
+                        </div>
+                        <br />
+
+                        <a id="save-attributegroup" class="modal-close waves-effect btn green">
+                            Save and exit
+                            <i class="material-icons right">playlist_add_check</i>
+                        </a>
+                    </form>
+
+
+
+
+                </div>
+
+            </div>
+        </div>
+
+    </div>*@
