--- a/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
@@ -294,8 +294,7 @@
                                     <option selected disabled>chsose type</option>
                                     <option value="bool">Yes/no</option>
                                     <option value="string">Text</option>
-                                    <option value="int">Integer number</option>
-                                    <option value="decimal">number with decimal</option>
+                                    <option value="int">number</option>
                                 </select>
                             </div>
                         </div>
