--- a/KingPIM/KingPIM.Web/Views/_ViewImports.cshtml
+++ b/KingPIM/KingPIM.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using KingPIM.Models.ViewModels;
 @using KingPIM.Models.Models;
+@using Microsoft.EntityFrameworkCore;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
