--- a/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
@@ -107,6 +107,10 @@
                                                 foreach (var attr in attrGroup.AttributeGroup.ProductAttributes)
                                                 {
 
+                                                    var prodAttrValueRow = Model.ProductAttributeValues.FirstOrDefault(x => x.ProductAttribute.Id.Equals(attr.Id) && x.ProductId.Equals(p.Id));
+                                                    //var prodAttrValueRow = Model.ProductAttributeValues.Find(attr.Id, p.Id);
+                                                    var prodAttrValueRowValue = prodAttrValueRow?.Value;
+
                                                     <form asp-action="UpdateAttributeValue" asp-controller="Product" method="post">
                                                         <input asp-for="ProductAttributeId" type="hidden" value="@attr.Id" />
                                                         <input asp-for="ProductId" type="hidden" value="@p.Id" />
@@ -114,32 +118,72 @@
                                                         {
                                                             <div class="col s8">
                                                                 <label>
-                                                                    @if (attr.Type == "true")
+                                                                    @if (prodAttrValueRowValue == "true")
                                                                     {
-                                                                        <input type="checkbox" checked />
+                                                                        <input asp-for="Value" type="checkbox" checked />
                                                                     }
                                                                     else
                                                                     {
-                                                                        <input type="checkbox" />
+                                                                        <input asp-for="Value" type="checkbox" />
                                                                     }
                                                                     <span>@attr.Name</span>
                                                                 </label>
                                                             </div>
                                                         }
-                                                        else
+                                                        else if (attr.Type == "int" || attr.Type == "string")
                                                         {
                                                             <div class="input-field col s8">
                                                                 @if (attr.Type == "int")
                                                                 {
-                                                                    <input asp-for="Value" id="@attr.Name" type="number" class="validate" required />
+                                                                    <input asp-for="Value" id="@attr.Name@p.Id" type="number" class="validate" value="@prodAttrValueRowValue" required />
                                                                 }
                                                                 else if (attr.Type == "string")
                                                                 {
-                                                                    <input asp-for="Value" id="@attr.Name" type="text" class="validate" required />
+                                                                    <input asp-for="Value" id="@attr.Name@p.Id" type="text" class="validate" value="@prodAttrValueRowValue" required />
                                                                 }
 
-                                                                <label asp-for="Value" for="@attr.Name">@attr.Name</label>
+                                                                <label asp-for="Value" for="@attr.Name@p.Id">@attr.Name</label>
                                                                 <span class="helper-text" data-error="Please enter a @attr.Name"></span>
+                                                            </div>
+                                                        }
+                                                        else if (attr.Type == "color")
+                                                        {
+                                                            <div class="col s8">
+                                                                
+                                                                <label>
+                                                                    @if (prodAttrValueRowValue != "red")
+                                                                    {
+                                                                        <input asp-for="Value" type="radio" class="with-gap" value="red" />
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <input asp-for="Value" type="radio" class="with-gap" value="red" checked />
+                                                                    }
+                                                                    <span>Red</span>
+                                                                </label>
+                                                                <label>
+                                                                    @if (prodAttrValueRowValue != "yellow")
+                                                                    {
+                                                                        <input asp-for="Value" type="radio" class="with-gap" value="yellow" />
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <input asp-for="Value" type="radio" class="with-gap" value="yellow" checked />
+                                                                    }
+                                                                    <span>Yellow</span>
+                                                                </label>
+                                                                <label>
+                                                                    @if (prodAttrValueRowValue != "blue")
+                                                                    {
+                                                                        <input asp-for="Value" type="radio" class="with-gap" value="blue" />
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <input asp-for="Value" type="radio" class="with-gap" value="blue" checked />
+                                                                    }
+
+                                                                    <span>Blue</span>
+                                                                </label>
                                                             </div>
                                                         }
 
