--- a/KingPIM/KingPIM.Web/Views/Product/DeleteModal.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Product/DeleteModal.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MainPageViewModel
 
-<div id="deleteSubcategoryModal" class="modal">
+<div id="deleteProductModal" class="modal">
     <div class="modal-content">
-        <h5 class="center">This will remove the subcategory and all products linked to it!</h5>
+        <h4 class="center">This will remove the product</h4>
         <div class="row">
-            <h6 class="center">Are you sure you want to delete it?</h6>
+            <h5 class="center">are you sure you want to delete it?</h5>
         </div>
     </div>
     <div class="modal-footer">
@@ -13,15 +13,15 @@
 
                 <form>
                     <a class="modal-close waves-effect btn grey col">
-                        Cancel
+                        No, cancel
                         <i class="material-icons right">cancel</i>
                     </a>
-                    <button asp-action="DeleteSubcategory" asp-controller="Subcategory"
+                    <button asp-action="DeleteProduct" asp-controller="Product"
                             class="modal-close btn waves-effect red darken-2 modal-trigger col" type="submit" style="margin-left:1em">
-                        Delete
+                        Yes, delete
                         <i class="material-icons right">delete</i>
                     </button>
-                    <input class="deleteSubcategoryModalInput" type="hidden" name="subcategoryId" value="" />
+                    <input class="deleteProductModalInput" type="hidden" name="productId" value="" />
 
                 </form>
             </div>
