--- a/KingPIM/KingPIM.Web/Views/Category/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Category/Index.cshtml
@@ -11,7 +11,7 @@
 
         @*Logs you out and only shows if youre logged in*@
         <div class="right">
-
+            <a asp-action="CategoryExportJSON" asp-controller="Category" class="btn waves-effect">Export to Json<i class="material-icons right">send</i></a>
             <a href="#createCategoryModal" class="btn waves-effect green modal-trigger">New category<i class="material-icons right">playlist_add</i></a>
             <a asp-action="Logout" asp-controller="Account" class="btn waves-effect red">Logout<i class="material-icons right">exit_to_app</i></a>
 
@@ -35,7 +35,11 @@
                     @foreach (var c in Model.Categories)
                     {
                         <tr>
-                            <td>@c.Name</td>
+                            <td>
+                                <a asp-action="CategoryExportJSON" asp-controller="Category" asp-route-categoryId="@c.Id" class="btn-flat" title="Export as JSON">
+                                    @c.Name
+                                </a>
+                            </td>
                             <td>
                                 <form asp-action="PublishCategory" asp-controller="Category">
 
