--- a/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
@@ -10,6 +10,7 @@
     <div class="row" style="margin-top: 1.5em">
         <div class="right">
 
+            <a asp-action="ProductExportJSON" asp-controller="Product" class="btn waves-effect">Export to Json<i class="material-icons right">send</i></a>
             <a href="#createProductModal" class="btn waves-effect green modal-trigger">New product<i class="material-icons right">playlist_add</i></a>
             <a asp-action="Logout" asp-controller="Account" class="btn waves-effect red">Logout<i class="material-icons right">exit_to_app</i></a>
 
@@ -34,7 +35,11 @@
                     @foreach (var p in Model.Products)
                     {
                         <tr>
-                            <td>@p.Name</td>
+                            <td>
+                                <a asp-action="ProductExportJSON" asp-controller="Product" asp-route-productId="@p.Id" class="btn-flat" title="Export as JSON">
+                                    @p.Name
+                                </a>
+                            </td>
                             <td>
                                 @if (!User.IsInRole("Editor"))
                                 {
