--- a/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
@@ -9,7 +9,8 @@
 <div class="container">
     <div class="row" style="margin-top: 1.5em">
         <div class="right">
-            @*<a href="#createAttributeGroupModal" class="btn waves-effect modal-trigger">New attribute group</a>*@
+
+            <a asp-action="SubcategoryExportJSON" asp-controller="Subcategory" class="btn waves-effect">Export to Json<i class="material-icons right">send</i></a>
             <a href="#createSubcategoryModal" class="btn waves-effect green modal-trigger">New subcategory<i class="material-icons right">playlist_add</i></a>
             <a asp-action="Logout" asp-controller="Account" class="btn waves-effect red">Logout<i class="material-icons right">exit_to_app</i></a>
 
@@ -34,7 +35,9 @@
                     {
                         <tr>
                             <td>
-                                @s.Name
+                                <a asp-action="SubcategoryExportJSON" asp-controller="Subcategory" asp-route-subcategoryId="@s.Id" class="btn-flat" title="Export as JSON">
+                                    @s.Name
+                                </a>
                             </td>
                             @*If the role can publish there will be a button, otherwise it
                                 will just tell the published value*@
