Can create new users with roles and downloaded sendgrid

--- a/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
@@ -38,4 +38,12 @@
         </div>
 
     </form>
+    <form>
+        <div class="row">
+            <button class="btn-flat waves-effect btn-large col offset-s2">
+                Forgot password
+            </button>
+        </div>
+        
+    </form>
 </div>
