--- a/KingPIM/KingPIM.Web/Views/Category/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Category/Index.cshtml
@@ -41,25 +41,40 @@
                                 </a>
                             </td>
                             <td>
-                                <form asp-action="PublishCategory" asp-controller="Category">
+                                @if (!User.IsInRole("Editor"))
+                                {
+                                    <form asp-action="PublishCategory" asp-controller="Category">
 
+                                        @if (c.Published)
+                                        {
+                                            <button class="btn waves-effect green darken-1" type="submit">
+                                                Published
+                                                <i class="material-icons right">check</i>
+                                            </button>
+                                        }
+                                        else
+                                        {
+                                            <button class="btn waves-effect red" type="submit">
+                                                Unpublished
+                                                <i class="material-icons right">lock_outline</i>
+                                            </button>
+                                        }
+                                        <input type="hidden" name="categoryId" value="@c.Id" />
+
+                                    </form>
+                                }
+                                else
+                                {
                                     @if (c.Published)
                                     {
-                                        <button class="btn waves-effect green darken-1" type="submit">
-                                            Published
-                                            <i class="material-icons right">check</i>
-                                        </button>
+                                        <p>Published</p>
                                     }
                                     else
                                     {
-                                        <button class="btn waves-effect red" type="submit">
-                                            Unpublished
-                                            <i class="material-icons right">lock_outline</i>
-                                        </button>
+                                        <p>Unpublished</p>
                                     }
-                                    <input type="hidden" name="categoryId" value="@c.Id" />
+                                }
 
-                                </form>
 
                             </td>
 
